# GraphDB-wikidata

./: .gitignore  Cargo.toml  README.md  query_example.txt  test_requests.txt
benches/: relation_benchmark.rs
frontend/: app.js  index.html
src/: calc_data_types.rs  calc_engine.rs  cli.rs  data_types.rs  file_vec.rs  interpreter.rs  lib.rs  main.rs  parser.rs  server.rs  small_string.rs  to_json_result.rs
src/ext_string/: mod.rs
src/ext_string/raw/: mod.rs
src/relation/: materialized_relation.rs  mod.rs
src/storage_engine/: builder.rs  mod.rs
tests/data/: first_5_lines.txt  form_sense_example.txt
