[package]
name = "graphdb"
version = "0.1.0"
edition = "2021"
default-run = "graphdb"
authors = ["Timm Bugla", "Thomas Decker", "Maarten Hartwig", "Marco Maltschick", "Matthias Niewerth", "Felix Pöschl", "Alexander Steigerwald", "Maurice Vietze"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0.148", features = ["derive"]}
serde_json = {version = "1.0.89"}
spargebra = {version = "0.2.3"}
ahash = { version = "0.8.0", default-features = false }
enum-primitive-derive = {version ="0.2.2"}
num-traits = {version = "0.2"}
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bincode = "1.3.3"
lazy_static = "1.4.0"
regex = "1.7.1"
clap = { version = "4.1.4", features = ["derive"] }
urlencoding = "2.1.2"
serde-tuple-vec-map = "1.0.1"
memmap2 = "0.5.10"
tempfile = "3.4.0"
serde_with = "2.3.1"
arr_macro = "0.2.1"
rayon = "1.7.0"
tokio-rayon = "2.1.0"
cfg-if = "1.0.0"
rust-crypto = "0.2.36"
rand = "0.7.3"
digest = "0.10.7"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "relation_benchmark"
harness = false
